Refactor controllers and service implementations to remove field-level @Autowired annotations
Revised dependency injection to use constructor-based injection in `AuthController`, `ScheduleController`, `StatsController`, and `StatisticServiceImpl`. Simplified code and improved testability by removing field-level `@Autowired` annotations and replacing them with constructor-based alternatives. Fixed minor issue with `values.getFirst()` in `StatisticServiceImpl`.